fix: rename Inter font and add extra letter spacing to baseline
the `.var.` was causing Internal Server Error on web hosting.

--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -165,7 +165,7 @@
 	font-weight: 100 900;
 	font-display: swap;
 	font-style: oblique 0deg 10deg;
-	src: url("assets/fonts/Inter/Inter.var.woff2?v=3.18") format("woff2");
+	src: url("assets/fonts/Inter/Inter.woff2?v=3.18") format("woff2");
 }
 
 @include declareCssVars(
